--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="image.html" class="list-group-item list-group-item-action border-0">
+                        <a href="#" class="list-group-item list-group-item-action border-0">
 
                             <div class="d-flex align-items-start">
                                 <img src="img/open-ai.png" class="rounded-circle mr-1" alt="William Harris" width="40" height="40">
